delete extra file

--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
             container: '1320px',
             faqwidth: '1200px',
             faqacc: '960px',
-            accParagraph: '610px'
+            accParagraph: '683px'
           }, fontSize: {
-            'xxl': '23px',
-            '2xsl': '25px',
-            '2xxl': '26px',
-            '2xll': '28px',
-            'fs29': '29px',
-            'max-big': '107px',
-            '7xxl': '74px',
-            '8xsl': '80px',
-            '8xxl': '108px',
-            '4lg': '34px',
-            '8xl': '48px',
+              'xxl': '23px',
+              '2xsl': '25px',
+              '2xxl': '26px',
+              '2xll': '28px',
+              'fs29': '29px',
+              'max-big': '107px',
+              '7xxl': '74px',
+              '8xsl': '80px',
+              '8xxl': '108px',
+              '4lg': '34px',
+              '8xl': '48px',
           },
           lineHeight: {
             'ls-sm': '22px',
@@ -452,7 +452,7 @@
       </div>
     </div>
   </section>
-  <section class=" overflow-x-clip lg:pt-[150px] pt-24 md:pt-32 mt-[300px]">
+  <section class="bg-layerColor bg-opacity-70 overflow-x-clip lg:pt-[150px] pt-24 md:pt-32 mt-[300px]">
     <div class=" max-w-[1224px] px-3 overflow-x-clip mx-auto">
       <div class="swiper-container overflow-x-clip relative z-[1]">
         <div class="swiper-wrapper max-w-[1200px] my-auto w-full  my-10 mb-10 md:mb-20 lg:mb-[102px]">
@@ -503,11 +503,10 @@
     </div>
   </section>
   <section class="bg-layerColor bg-opacity-70">
-    <div class="container max-w-container py-12">
-      <h2 class=" uppercase text-lightdarkgreen  font-barlow-condensed font-bold text-2xsl leading-ls-sm text-center">
-        our
-        partners</h2>
-      <h3 <div class="mx-auto max-w-faqwidth rounded-xl bg-[#0B1F4F] shadow-faqShadow border-2 border-faqborder">
+    <div class="container max-w-container py-1 sm:py-12">
+      <h2 class=" uppercase text-lightdarkgreen mt-8 md:mt-24  font-barlow-condensed font-bold text-2xsl leading-ls-sm text-center">
+        — Austin Barack, Partner, CoinFund</h2>
+      <div class="mx-auto max-w-faqwidth rounded-xl bg-[#0B1F4F] shadow-faqShadow border-2 border-faqborder mt-10 sm:mt-16 md:mt-32 lg:mt-40 2xl:mt-[250px]">
         <div class="transform translate-y-[78px]">
           <h2
             class="font-poppins font-semibold text-4xl sm:text-5xl md:text-6xl xl:text-7xxl capitalize bg-faqheading textBg sm:flex justify-center text-center lg:text-start">
@@ -518,9 +517,9 @@
               <div class="relative rounded-lgg p-[1px] accordion-header bg-borderAccordion">
                 <h6 class="mb-0">
                   <button
-                    class="border_r relative flex items-center gap-2 md:gap-16 w-full py-3 px-4 sm:p-6 md:p-heading font-poppins font-semibold text-xl sm:text-3xl md:text-4lg text-left transition-all ease-in cursor-pointer group text-white group-open rounded-t-lgg "
+                    class="border_r relative flex items-center gap-2 md:gap-16 w-full py-3 px-4 sm:p-6 md:p-heading font-poppins font-semibold text-lg sm:text-xl sm:text-3xl md:text-4lg  tracking-tighter text-left transition-all ease-in cursor-pointer group text-white group-open rounded-t-lgg "
                     data-collapse-target="animated-collapse-1">
-                    <span class="text-lightdarkgreen text-2xsl pe-2">01</span> <span>What is
+                    <span class="text-lightdarkgreen text- sm:text-2xsl pe-2">01</span> <span>What is
                       PulseChain?</span>
                     <i class="absolute right-4 sm:right-16 pt-1 text-base transition-transform fa fa-chevron-down"></i>
                   </button>
@@ -529,7 +528,7 @@
                   class="overflow-hidden transition-all duration-300 ease-in-out bg-[#0E1F56] rounded-b-lgg"
                   style="height: auto;">
                   <div
-                    class="p-4 font-poppins text-lg sm:text-xl md:text-xxl leading-normal text-dark-gray-100 max-w-accParagraph mx-auto">
+                    class="md:pt-12 pt-5 pb9 md:pb-20 px-3 font-poppins text-lg sm:text-xl md:text-xxl leading-normal tracking-tighter text-dark-gray-100 max-w-accParagraph mx-auto">
                     We're not always in the position that we want to be at. We're constantly
                     growing. We're constantly making mistakes. We're constantly trying to express
                     ourselves and actualize our dreams.
@@ -542,9 +541,9 @@
               <div class="relative rounded-lgg p-[1px] accordion-header">
                 <h6 class="mb-0">
                   <button
-                    class="border_r relative flex items-center gap-2 md:gap-16 w-full py-3 px-4 sm:p-6 md:p-heading font-poppins font-semibold text-xl sm:text-3xl md:text-4lg text-left transition-all ease-in cursor-pointer group text-white bg-[#0B2153] rounded-t-lgg rounded-b-0"
+                    class="border_r relative flex items-center gap-2 md:gap-16 w-full py-3 px-4 sm:p-6 md:p-heading font-poppins font-semibold text-lg sm:text-xl sm:text-3xl md:text-4lg  tracking-tighter text-left transition-all ease-in cursor-pointer group text-white bg-[#0B2153] rounded-t-lgg rounded-b-0"
                     data-collapse-target="animated-collapse-2">
-                    <span class="text-lightdarkgreen text-2xsl pe-2">02</span> <span>What is a
+                    <span class="text-lightdarkgreen text- sm:text-2xsl pe-2">02</span> <span>What is a
                       Subnet?</span>
                     <i class="absolute right-4 sm:right-16 pt-1 text-base transition-transform fa fa-chevron-down"></i>
                   </button>
@@ -553,7 +552,7 @@
                   class="overflow-hidden transition-all duration-300 ease-in-out bg-[#0E1F56] rounded-b-lgg"
                   style="height: 0;">
                   <div
-                    class="p-4 font-poppins text-lg sm:text-xl md:text-xxl leading-normal text-dark-gray-100 max-w-accParagraph mx-auto">
+                    class="md:pt-12 pt-5 pb9 md:pb-20 px-3 font-poppins text-lg sm:text-xl md:text-xxl leading-normal tracking-tighter text-dark-gray-100 max-w-accParagraph mx-auto">
                     We're not always in the position that we want to be at. We're constantly
                     growing. We're constantly making mistakes. We're constantly trying to express
                     ourselves and actualize our dreams.
@@ -566,9 +565,9 @@
               <div class="relative rounded-lgg p-[1px] accordion-header">
                 <h6 class="mb-0">
                   <button
-                    class="border_r relative flex items-center gap-2 md:gap-16 w-full py-3 px-4 sm:p-6 md:p-heading font-poppins font-semibold text-xl sm:text-3xl md:text-4lg text-left transition-all ease-in cursor-pointer group text-white bg-[#0B2153] rounded-t-lgg rounded-b-0"
+                    class="border_r relative flex items-center gap-2 md:gap-16 w-full py-3 px-4 sm:p-6 md:p-heading font-poppins font-semibold text-lg sm:text-xl sm:text-3xl md:text-4lg  tracking-tighter text-left transition-all ease-in cursor-pointer group text-white bg-[#0B2153] rounded-t-lgg rounded-b-0"
                     data-collapse-target="animated-collapse-3">
-                    <span class="text-lightdarkgreen text-2xsl pe-2">03</span> <span>What is liquid
+                    <span class="text-lightdarkgreen text- sm:text-2xsl pe-2">03</span> <span>What is liquid
                       staking? </span>
                     <i class="absolute right-4 sm:right-16 pt-1 text-base transition-transform fa fa-chevron-down"></i>
                   </button>
@@ -577,7 +576,7 @@
                   class="overflow-hidden transition-all duration-300 ease-in-out bg-[#0E1F56] rounded-b-lgg"
                   style="height: 0;">
                   <div
-                    class="p-4 font-poppins text-lg sm:text-xl md:text-xxl leading-normal text-dark-gray-100 max-w-accParagraph mx-auto">
+                    class="md:pt-12 pt-5 pb9 md:pb-20 px-3 font-poppins text-lg sm:text-xl md:text-xxl leading-normal tracking-tighter text-dark-gray-100 max-w-accParagraph mx-auto">
                     We're not always in the position that we want to be at. We're constantly
                     growing. We're constantly making mistakes. We're constantly trying to express
                     ourselves and actualize our dreams.
@@ -590,9 +589,9 @@
               <div class="relative rounded-lgg p-[1px] accordion-header">
                 <h6 class="mb-0">
                   <button
-                    class="border_r relative flex items-center gap-2 md:gap-16 w-full py-3 px-4 sm:p-6 md:p-heading font-poppins font-semibold text-xl sm:text-3xl md:text-4lg text-left transition-all ease-in cursor-pointer group text-white bg-[#0B2153] rounded-t-lgg rounded-b-0"
+                    class="border_r relative flex items-center gap-2 md:gap-16 w-full py-3 px-4 sm:p-6 md:p-heading font-poppins font-semibold text-lg sm:text-xl sm:text-3xl md:text-4lg  tracking-tighter text-left transition-all ease-in cursor-pointer group text-white bg-[#0B2153] rounded-t-lgg rounded-b-0"
                     data-collapse-target="animated-collapse-4">
-                    <span class="text-lightdarkgreen text-2xsl pe-2">04</span> <span>How does Project Pi
+                    <span class="text-lightdarkgreen text- sm:text-2xsl pe-2">04</span> <span>How does Project Pi
                       work? </span>
                     <i class="absolute right-4 sm:right-16 pt-1 text-base transition-transform fa fa-chevron-down"></i>
                   </button>
@@ -601,7 +600,7 @@
                   class="overflow-hidden transition-all duration-300 ease-in-out bg-[#0E1F56] rounded-b-lgg"
                   style="height: 0;">
                   <div
-                    class="p-4 font-poppins text-lg sm:text-xl md:text-xxl leading-normal text-dark-gray-100 max-w-accParagraph mx-auto">
+                    class="md:pt-12 pt-5 pb9 md:pb-20 px-3 font-poppins text-lg sm:text-xl md:text-xxl leading-normal tracking-tighter text-dark-gray-100 max-w-accParagraph mx-auto">
                     We're not always in the position that we want to be at. We're constantly
                     growing. We're constantly making mistakes. We're constantly trying to express
                     ourselves and actualize our dreams.
@@ -611,7 +610,7 @@
             </div>
           </div>
         </div>
-    </div>
+      </div>
 
     </div>
   </section>
@@ -621,7 +620,7 @@
     document.querySelectorAll('button[data-collapse-target]').forEach(button => {
       const collapseTarget = document.getElementById(button.getAttribute('data-collapse-target'));
       if (button.classList.contains('group-open')) {
-        collapseTarget.style.height = collapseTarget.scrollHeight + 'px';
+        collapseTarget.style.height =  '240' + 'px';
       }
       button.addEventListener('click', () => {
         const currentlyOpenButton = document.querySelector('button.group-open');
@@ -633,7 +632,7 @@
           currentlyOpenButton.closest('.accordion-header').classList.remove('bg-borderAccordion');
         }
         if (collapseTarget.style.height === '0px' || collapseTarget.style.height === '') {
-          collapseTarget.style.height = collapseTarget.scrollHeight + 'px';
+          collapseTarget.style.height = '240' + 'px';
           button.classList.add('group-open');
           button.closest('.accordion-item').classList.add('active');
           button.closest('.accordion-header').classList.add('bg-borderAccordion');
